fix: hide overflow

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -8,4 +8,5 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  overflow: hidden;
 }
